Fixed Section Spacing

--- a/style.css
+++ b/style.css
@@ -102,7 +102,9 @@ padding-top: 2em;
 }
 
 
-
+.space{
+    height: 3em;
+}
 
 
 section{
@@ -391,9 +393,7 @@ footer{
 
 }
 
-.space{
-    height: 8em;
-}
+
 
 
 header a{
